# eat_what

./: .gitignore  DEPLOYMENT.md  README.md  index.html  package-lock.json  package.json  pyproject.toml  script.js  style.css
backend/: database.js  foods.db  package.json  server.js
backend/api/controllers/: foodController.js
backend/api/routes/: foodRoutes.js
data/: foods.db  foods.json
frontend/: index.html  package-lock.json  package.json
frontend/src/assets/styles/: main.css
frontend/src/js/: api.js  main.js  ui.js
src/: main.py
src/api/: schemas.py
src/core/: database.py
src/static/: index.html
src/static/css/: main.css
src/static/js/: api.js  main.js  ui.js
