[project]
name = "eat_what"
version = "0.1.0"
description = "A simple full-stack application to help you decide what to eat."
dependencies = [
    "fastapi[all]",
    "uvicorn[standard]",
    "sqlalchemy",
    "pydantic[email]",
    "python-multipart",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = []